--- a/v1.0/web/package.json
+++ b/v1.0/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "element-ui": "^2.0.1",
     "jquery": "^3.2.1",
     "style-loader": "^0.19.0",
     "superagent": "^3.8.0",
