--- a/v1.0/web/package.json
+++ b/v1.0/web/package.json
@@ -24,6 +24,7 @@
     "babel-preset-env": "^1.6.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "element-ui": "^2.0.0-rc.1",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
