--- a/v1.0/web/package.json
+++ b/v1.0/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "babel-plugin-component": "^0.10.1",
     "element-ui": "^2.0.1",
     "jquery": "^3.2.1",
     "style-loader": "^0.19.0",
@@ -24,7 +25,6 @@
     "babel-preset-env": "^1.6.0",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "element-ui": "^2.0.0-rc.1",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
